fix horizontal scrollbar
this was accidentally introduced.

--- a/pub/style.css
+++ b/pub/style.css
@@ -147,8 +147,8 @@ div#posts.solo {
 div.post {
     flex: clamp(250px, 30vh + 20vw, 500px);
     break-inside: avoid;
-    margin: 0 -1em;
-    padding: 0 1em;
+    margin: 0 -8px;
+    padding: 0 8px;
 }
 
 div.post.pending, div.post.rejected, div.post.banned {
